# public

./: meter.c  note.txt  token.txt  x.c  工作计划.txt
cat1.ec200.eu/wifi_stick_esp32/: CMakeLists.txt  partitions.csv.bak  run.sh  sdkconfig  sdkconfig.old
cat1.ec200.eu/wifi_stick_esp32/main/: CMakeLists.txt  esp_app.c  esp_app.c.bak
cat1.ec200.eu/wifi_stick_esp32/main/modules/wifi/: ####asw_smart_pr  CMakeLists.txt  aes.c  asw_ap_prov.c  native_ota.c  wifi_sta_server.c
components/cloud/: CMakeLists.txt  aiot_mqtt_sign.c  app_mqtt.c  asw_mqtt.c  cloud_task.c  kaco copy.c.bak  kaco copy.c.bak.01  kaco.c  kaco_history_file_manager.c  save_inv_data.c  update.c
components/cloud/include/: aiot_mqtt_sign.h  app_mqtt.h  asw_mqtt.h  kaco.h  kaco_history_file_manager.h  save_inv_data.h  update.h
components/common/: CMakeLists.txt  asw_fat.c  asw_nvs.c  asw_ota.c  esp32_time.c  http_client.c  https_client.c  led_task.c  utility.c
components/common/include/: asw_fat.h  asw_nvs.h  asw_ota.h  http_client.h  https_client.h  led_task.h  utility.h
components/inv/: CMakeLists.txt  asw_modbus.c  data_process.c  datadecode.c  inv_com.c  inv_task.c  mqueue.c
components/inv/include/: asw_modbus.h  crc16.h  data_process.h  datadecode.h  inv_com.h  inv_task.h  mqueue.h
components/meter/: CMakeLists.txt  meter.c
components/meter/include/: meter.h
components/protocol/: CMakeLists.txt  FtpClient copy.c.bak  FtpClient.c  asw_protocol_ate.c  asw_protocol_ftp copy.c.bak  asw_protocol_ftp.c  asw_protocol_nearby.c
components/protocol/include/: FtpClient.h  asw_protocol_ate.h  asw_protocol_ftp.h  asw_protocol_nearby.h
components/wifi/: CMakeLists.txt  aes.c  asw_job_http.c  kaco_tcp_server.c  native_ota.c  sha256.c  wifi_sta_server.c
components/wifi/include/: asw_job_http.h  kaco_tcp_server.h  sha256.h  wifi_sta_server.h
estore/: keyword.txt
estore.lan/components/: meter.tar.xz
estore.lan/components/cloud/: CMakeLists.txt  app_mqtt.c  asw_mqtt.c  cat1.c  cat1.h  cloud_task.c  estore_cld.c  save_inv_data.c  update.c
estore.lan/components/cloud/include/: app_mqtt.h  asw_mqtt.h  cloud_task.h  estore_cld.h  save_inv_data.h  update.h
estore.lan/components/common/: CMakeLists.txt  asw_fat.c  asw_nvs.c  asw_ota.c  esp32_time.c  http_client.c  led_task.c  utility.c
estore.lan/components/common/include/: asw_fat.h  asw_nvs.h  esp32_time.h  http_client.h  utility.h
estore.lan/components/inv/: CMakeLists.txt  asw_invtask_fun.c  asw_modbus.c  asw_mutex.c  crc16.c  data_process.c  datadecode.c  estore_com.c  inv_com.c  inv_task.c  mqueue.c
estore.lan/components/inv/include/: asw_invtask_fun.h  asw_modbus.h  asw_mqueue.h  asw_mutex.h  crc16.h  data_process.h  estore_com.h  inv_com.h
estore.lan/components/meter/: CMakeLists.txt  meter.c  meter_md_process.c
estore.lan/components/meter/include/: meter.h  meter_md_process.h
estore.lan/components/protocol/: CMakeLists.txt  asw_protocol_ate.c  asw_protocol_nearby.c
estore.lan/components/protocol/include/: asw_protocol_ate.h  asw_protocol_nearby.h
estore.lan/components/protocol_examples_common/: connect.c
estore.lan/components/wifi/: CMakeLists.txt  asw_job_http.c  native_ota.c  sha256.c  wifi_sta_server.c
estore.lan/components/wifi/include/: asw_job_http.h  native_ota.h  wifi_sta_server.h
estore.lan/main/: Asw_global.h  CMakeLists.txt  component.mk  main.c
kaco.cmp.meter/: kaco.c  kaco_meter.c  wifi_meter.c  wifi_setmeter_getdev_cgi.c
tianhe2.ec600/: partitions.csv  partitions.csv.2  run.sh  sdkconfig.old
tianhe2.ec600/main/: esp_app.c
tianhe2.ec600/main/modules/ble_prov/: CMakeLists.txt
tianhe2.ec600/main/modules/cloud/: aiot_mqtt_sign.h  app_mqtt.c  asw_mqtt.c  asw_mqtt.h  cat1.c  cat1.h  cloud_task.c  save_inv_data.c  tianhe.c  tianhe.h
tianhe2.ec600/main/modules/common/: CMakeLists.txt  asw_fat.c  asw_fat.h  asw_ota.c.bak  asw_ota.h.bak  esp32_time.c  http_client.c.bak  led_task.c  log.h  utility.c
tianhe2.ec600/main/modules/inv/: asw_store.c  asw_store.h  common.c  common.h  data_process.c  data_process.h  datadecode.c  device_data.c  device_data.h  inv_com.c  inv_com.h  inv_task.c  inv_task.h
(+59 files in other folders)
